CSS fix TinyMCE fullscreen behind menu (caused by scrollToFixed added z-index)

--- a/assets/themes/WPadmin/css/stylesheet.css
+++ b/assets/themes/WPadmin/css/stylesheet.css
@@ -25,6 +25,7 @@
 	position:relative;
 	float:left;
 	overflow: visible;
+	z-index: auto !important;
 }
 #menushadow{
 	position:absolute;
